# bmad-todo-app

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  AGENT.md  Makefile  README.md  _mcp_test_pg.py  _mcp_test_pw.py  docker-compose.yml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
_bmad-output/implementation-artifacts/: 1-1-repository-scaffold-and-docker-compose-setup.md  1-2-backend-project-structure-and-health-endpoint.md  1-3-database-schema-and-alembic-migration.md  sprint-status.yaml
_bmad-output/implementation-artifacts/tests/: test-summary.md
_bmad-output/planning-artifacts/: architecture.md  epics.md  prd.md  product-brief-bmad-todo-app-2026-03-09.md  ux-design-specification.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_todos_table.py
backend/app/: crud.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: todos.py
backend/tests/: conftest.py  test_todos.py
docs/: mcp-comparison.md
e2e/: README.md  package-lock.json  package.json  playwright.config.ts
e2e/tests/: todo-app.spec.ts
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: AddTodoForm.tsx  EmptyState.tsx  ErrorBanner.tsx  (+4 more)
(+1 files in other folders)
